@@ -124,6 +124,27 @@ CFDictionaryCreate (CFAllocatorRef allocator, const void **keys,
 CFDictionaryRef
 CFDictionaryCreateCopy (CFAllocatorRef allocator, CFDictionaryRef dict)
 {
+  if (CF_IS_OBJC(_kCFDictionaryTypeID, dict))
+    {
+      CFIndex count = CFDictionaryGetCount(dict);
+      const void **values, **keys;
+      CFDictionaryRef copy;
+
+      keys = (const void **) CFAllocatorAllocate(allocator,
+        sizeof(const void *) * count, 0);
+      values = (const void **) CFAllocatorAllocate(allocator,
+        sizeof(const void *) * count, 0);
+
+      CFDictionaryGetKeysAndValues(dict, keys, values);
+      copy = CFDictionaryCreate(allocator, keys, values, count,
+        &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks);
+
+      CFAllocatorDeallocate(allocator, keys);
+      CFAllocatorDeallocate(allocator, values);
+
+      return copy;
+    }
+
   return (CFDictionaryRef)GSHashTableCreateCopy (allocator,
     (GSHashTableRef)dict);
 }
@@ -151,19 +172,29 @@ CFDictionaryApplyFunction (CFDictionaryRef dict,
 Boolean
 CFDictionaryContainsKey (CFDictionaryRef dict, const void *key)
 {
+  if (CF_IS_OBJC(_kCFDictionaryTypeID, dict))
+    {
+      void *object;
+      CF_OBJC_CALLV (void*, object, dict, "objectForKey:", key);
+      return object != NULL;
+    }
+  
   return GSHashTableContainsKey ((GSHashTableRef)dict, key);
 }
 
 Boolean
 CFDictionaryContainsValue (CFDictionaryRef dict, const void *value)
 {
+  if (CF_IS_OBJC(_kCFDictionaryTypeID, dict))
+    return CFDictionaryGetCountOfValue(dict, value) ? true : false;
+  
   return GSHashTableContainsValue ((GSHashTableRef)dict, value);
 }
 
 CFIndex
 CFDictionaryGetCount (CFDictionaryRef dict)
 {
-  CF_OBJC_FUNCDISPATCH0(_kCFDictionaryTypeID, CFIndex, dict, "count");
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, CFIndex, dict, "count");
   
   return GSHashTableGetCount ((GSHashTableRef)dict);
 }
@@ -171,12 +202,18 @@ CFDictionaryGetCount (CFDictionaryRef dict)
 CFIndex
 CFDictionaryGetCountOfKey (CFDictionaryRef dict, const void *key)
 {
+  if (CF_IS_OBJC(_kCFDictionaryTypeID, dict))
+    return CFDictionaryContainsKey(dict, key) ? 1 : 0;
+  
   return GSHashTableGetCountOfKey ((GSHashTableRef)dict, key);
 }
 
 CFIndex
 CFDictionaryGetCountOfValue (CFDictionaryRef dict, const void *value)
 {
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, Boolean, dict,
+    "_cfCountOfValue:", value);
+  
   return GSHashTableGetCountOfValue ((GSHashTableRef)dict, value);
 }
 
@@ -184,7 +221,7 @@ void
 CFDictionaryGetKeysAndValues (CFDictionaryRef dict, const void **keys,
   const void **values)
 {
-  CF_OBJC_FUNCDISPATCH2(_kCFDictionaryTypeID, void, dict,
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, void, dict,
     "getObjects:andKeys:", values, keys);
   
   GSHashTableGetKeysAndValues ((GSHashTableRef)dict, keys, values);
@@ -193,7 +230,7 @@ CFDictionaryGetKeysAndValues (CFDictionaryRef dict, const void **keys,
 const void *
 CFDictionaryGetValue (CFDictionaryRef dict, const void *key)
 {
-  CF_OBJC_FUNCDISPATCH1(_kCFDictionaryTypeID, const void *, dict,
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, const void *, dict,
     "objectForKey:", key);
   
   return GSHashTableGetValue ((GSHashTableRef)dict, key);
@@ -239,6 +276,34 @@ CFMutableDictionaryRef
 CFDictionaryCreateMutableCopy (CFAllocatorRef allocator, CFIndex capacity,
   CFDictionaryRef dict)
 {
+  if (CF_IS_OBJC(_kCFDictionaryTypeID, dict))
+    {
+      CFIndex count = CFDictionaryGetCount(dict);
+      const void **values, **keys;
+      CFMutableDictionaryRef copy;
+      CFIndex i;
+
+      keys = (const void **) CFAllocatorAllocate(allocator,
+        sizeof(const void *) * count, 0);
+      values = (const void **) CFAllocatorAllocate(allocator,
+        sizeof(const void *) * count, 0);
+
+      if (count > capacity)
+        capacity = count;
+
+      CFDictionaryGetKeysAndValues(dict, keys, values);
+      copy = CFDictionaryCreateMutable(allocator, capacity,
+        &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks);
+
+      for (i = 0; i < count; i++)
+        CFDictionaryAddValue(copy, keys[i], values[i]);
+
+      CFAllocatorDeallocate(allocator, keys);
+      CFAllocatorDeallocate(allocator, values);
+
+      return copy;
+    }
+
   return (CFMutableDictionaryRef)GSHashTableCreateMutableCopy (allocator,
     (GSHashTableRef)dict, capacity);
 }
@@ -247,13 +312,16 @@ void
 CFDictionaryAddValue (CFMutableDictionaryRef dict, const void *key,
   const void *value)
 {
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, void, dict,
+    "setObject:forKey:", value, key);
+  
   GSHashTableAddValue ((GSHashTableRef)dict, key, value);
 }
 
 void
 CFDictionaryRemoveAllValues (CFMutableDictionaryRef dict)
 {
-  CF_OBJC_FUNCDISPATCH0(_kCFDictionaryTypeID, void, dict, "removeAllObjects");
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, void, dict, "removeAllObjects");
   
   GSHashTableRemoveAll ((GSHashTableRef)dict);
 }
@@ -261,7 +329,7 @@ CFDictionaryRemoveAllValues (CFMutableDictionaryRef dict)
 void
 CFDictionaryRemoveValue (CFMutableDictionaryRef dict, const void *key)
 {
-  CF_OBJC_FUNCDISPATCH1(_kCFDictionaryTypeID, void, dict,
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, void, dict,
     "removeObjectForKey:", key);
   
   GSHashTableRemoveValue ((GSHashTableRef)dict, key);
@@ -271,6 +339,9 @@ void
 CFDictionaryReplaceValue (CFMutableDictionaryRef dict, const void *key,
   const void *value)
 {
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, void, dict,
+    "_cfReplaceValue::", key, value);
+  
   GSHashTableReplaceValue ((GSHashTableRef)dict, key, value);
 }
 
@@ -278,8 +349,8 @@ void
 CFDictionarySetValue (CFMutableDictionaryRef dict, const void *key,
   const void *value)
 {
-  CF_OBJC_FUNCDISPATCH2(_kCFDictionaryTypeID, void, dict,
-    "setObject:forKey:", value, key);
+  CF_OBJC_FUNCDISPATCHV(_kCFDictionaryTypeID, void, dict,
+    "_cfSetValue::", key, value);
   
   GSHashTableSetValue ((GSHashTableRef)dict, key, value);
 }
